routes.rb/application.htmlの追記

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body class="d-flex flex-column">
-    <%= render '/header' %>
+    <%= render 'layouts/header' %>
     <main>
     <%= yield %>
     </main>
