--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,11 +5,11 @@
     <li class="nav-item"><%= link_to "マイページ", "#" %></li>
     <li class="nav-item"><%= link_to "商品一覧", "#" %></li>
     <li class="nav-item"><%= link_to "カート", "#" %></li>
-    <li class="nav-item"><%= link_to "ログアウト", "#" %></li>
+    <li class="nav-item"><%= link_to "ログアウト", destroy_customer_session_path, method: :delete %></li>
   <% else %>
     <li class="nav-item"><%= link_to "About", "#" %></li>
     <li class="nav-item"><%= link_to "商品一覧", "#" %></li>
-    <li class="nav-item"><%= link_to "新規登録", "#" %></li>
+    <li class="nav-item"><%= link_to "新規登録",  new_customer_registration_path, method: :get %></li>
     <li class="nav-item"><%= link_to "ログイン", "#" %></li>
   <% end %>
 
