--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <h1>Logo</h1>
 
-<ul class="navbar-nav ml-auto">
+<ul class="nav ml-auto">
   <% if customer_signed_in? %>
     <li class="nav-item"><%= link_to "マイページ", "#" %></li>
     <li class="nav-item"><%= link_to "商品一覧", "#" %></li>
