--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <h2 class="title">ジャンル編集</h2>
-  <%= form_with model: XXX, url: XXX do |f| %>
-    <div class="field">
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-    </div>
-    <%= f.submit "変更を保存", class: "btn btn-success" %>
-  <% end %>
+    <%= form_with model: [:admin, @genre] do |f| %>
+      <div class="field">
+        <%= f.label "ジャンル名" %>
+        <%= f.text_field :name %>
+      </div>
+      <%= f.submit "変更を保存", class: "btn btn-success" %>
+    <% end %>
 </div>
