--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,22 +1,24 @@
 <div class="container">
   <h2 class="title">ジャンル一覧・追加</h2>
-    <%= form_with model: XXX, url: XXX do |f| %>
+    <%= form_with model: [:admin, @genre] do |f| %>
       <div class="field">
-        <%= f.label :name %>
+        <%= f.label "ジャンル名" %>
         <%= f.text_field :name %>
       </div>
       <%= f.submit "新規登録", class: "btn btn-success" %>
     <% end %>
-    
+
   <thead>
     <th>ジャンル</th>
-    <tr>
-      <% @genres.each do |genre| %>
-        <tr>
-          <%= genre.name, genre_path(genre.id) %>
-          <%= link_to "編集する", edit_admin_genre_path(@genre.id), class: "btn btn-success" %>
-        </tr>
-      <% end %>
-    </tr>
   </thead>
+  <tbody>
+    <% @genres.each do |genre| %>
+      <tr>
+        <td><%= genre.name %></td>
+        <td>
+          <%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-success" %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </div>
