顧客一覧画面、トップページ追加中

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -16,9 +16,13 @@
       <%# @orders.each do |order| %>
       <tbody>
         <tr>
+          <%#= link_to "#{order.created_at}", order_path(order.id) %>
           <td>2022/12/12</td>
+          <%#= order.customer.name %>
           <td>石倉基之</td>
+          <%#= order.order_items.quantity %>
           <td>2</td>
+          <%#= order.status %>
           <td>入金待ち</td>
         </tr>
       </tbody>
