--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
     <li class="nav-item"><%= link_to "About", "#" %></li>
     <li class="nav-item"><%= link_to "商品一覧", "#" %></li>
     <li class="nav-item"><%= link_to "新規登録",  new_customer_registration_path, method: :get %></li>
-    <li class="nav-item"><%= link_to "ログイン", "#" %></li>
+    <li class="nav-item"><%= link_to "ログイン", customer_session_path,method: :get%></li>
   <% end %>
 
 </ul>
