--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,2 +1,14 @@
-<p>注文履歴詳細</p>
+<div class="container">
+  <div class="row">
+    <span>注文履歴詳細</span>
+  </div>    
+  <div class="row">
+    <table class="table table-borderless">
+        <tbody>
+            <th>購入者</th>
+            <td></td>
+        </tbody>
+    </table>
+  </div>
+</div>
 
