--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -16,12 +16,13 @@
       <tbody>
         <tr>
           <td><%= customer.id %></td>
-          <td><%#= link_to "#{customer.name}", "#"#customer_path(customer.id) %></td>
+          <td><%= link_to "#{customer.last_name+customer.first_name}", admin_customer_path(customer.id) %></td>
           <td><%= customer.email %></td>
           <td><%= customer.is_deleted %></td>
         </tr>
       </tbody>
       <% end %>
+      <%= paginate @customers %>
     </table>
   </div>
 </div>
