--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -55,5 +55,10 @@
         </tr>
       </table>
     </div>
+    <div class="row">
+      <div class="col d-flex align-items-center">
+        <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
+      </div>
+    </div>
   </div>
 </div>
