--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -44,7 +44,7 @@
       </thread>
       <tbody>
         <tr>
-          <td>2022/12/12</td>
+          <td><%= link_to "2022/12/12", admin_order_path(1) %></td>
           <td>石倉基之</td>
           <td>2</td>
           <td>入金待ち</td>
