--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,13 +2,13 @@
 
 <ul class="nav ml-auto">
   <% if customer_signed_in? %>
-    <li class="nav-item"><%= link_to "マイページ", "#" %></li>
-    <li class="nav-item"><%= link_to "商品一覧", "#" %></li>
-    <li class="nav-item"><%= link_to "カート", "#" %></li>
+    <li class="nav-item"><%= link_to "マイページ", customer_path(current_customer.id) %></li>
+    <li class="nav-item"><%= link_to "商品一覧", items_path %></li>
+    <li class="nav-item"><%= link_to "カート", cart_items_path %></li>
     <li class="nav-item"><%= link_to "ログアウト", destroy_customer_session_path, method: :delete %></li>
   <% else %>
-    <li class="nav-item"><%= link_to "About", "#" %></li>
-    <li class="nav-item"><%= link_to "商品一覧", "#" %></li>
+    <li class="nav-item"><%= link_to "About", about_path %></li>
+    <li class="nav-item"><%= link_to "商品一覧", items_path %></li>
     <li class="nav-item"><%= link_to "新規登録",  new_customer_registration_path, method: :get %></li>
     <li class="nav-item"><%= link_to "ログイン", customer_session_path,method: :get%></li>
   <% end %>
