--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -9,16 +9,16 @@
     <% end %>
 
   <thead>
-    <th>ジャンル</th>
+    <th>ジャンル</th><br>
+    <tr>
+      <% @genres.each do |genre| %>
+        <tr>
+          <td><%= genre.name %></td>
+          <td>
+            <%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-success" %>
+          </td>
+        </tr><br>
+      <% end %>
+    </tr>
   </thead>
-  <tbody>
-    <% @genres.each do |genre| %>
-      <tr>
-        <td><%= genre.name %></td>
-        <td>
-          <%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-success" %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
 </div>
