--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,16 +1,18 @@
 <div class="container">
   <h2 class="title">商品一覧</h2>
   <tbody>
+    <tr>
     <% @items.each do |item| %>
       <tr>
         <td><%= item.id %></td>
         <td><%= item.name %></td>
         <td><%= item.non_taxed_price %></td>
-        <td><%= genres.name %></td>
+        <td><%= item.genres_id %></td>
         <td>
           <%= item.is_active %>
         </td>
-      </tr>
+      </tr><br>
     <% end %>
+    </tr>
   </tbody>
 </div>
