ヘッダー情報の更新

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -6,7 +6,7 @@
         <td><%= item.id %></td>
         <td><%= item.name %></td>
         <td><%= item.non_taxed_price %></td>
-        <td><%= genres.name %></td>
+        <td><%= item.genre.name %></td>
         <td>
           <%= item.is_active %>
         </td>
