--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -5,11 +5,15 @@
     <% @items.each do |item| %>
       <tr>
         <td><%= item.id %></td>
-        <td><%= item.name %></td>
+        <td><%= link_to item.name, edit_admin_item_path(item.id) %></td>
         <td><%= item.non_taxed_price %></td>
-        <td><%= item.genres_id %></td>
+        <td><%= item.genre.name %></td>
         <td>
-          <%= item.is_active %>
+          <% if item.is_active == true %>
+            販売中
+          <% else %>
+            販売停止中
+          <% end %>
         </td>
       </tr><br>
     <% end %>
