--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -20,15 +20,17 @@
     </div>
   </div>
   <div class="row mt-4">
-    <div class="col-8 offset-2">
+    <div class="col-10 offset-2">
       <h3 class="font-weight-bold">新着商品</h3>
-      <% @new_items.each do |new_item| %>
-      <div class="d-flex flex-row flex-fill mt-2">
+      <% @items.each do |item| %>
+      <div class=" card d-inline-flex mt-2 border border-0">
+        <div class="card-body px-0 mr-2">
         <%= link_to item_path(item.id) do %>
-          <%= image_tag item.user.get_profile_image, size: "60x100" %>
+          <%= image_tag item.image, size: "200x120" %>
         <% end %>
-        <%= item.name %>
-        <h3 class="font-weight-bold">¥<%= item.with_tax_price %></h3>
+        <h5 class="font-weight-bold"><%= item.name %></h5>
+        <h5 class="font-weight-bold">¥<%= item.with_tax_price.to_s(:delimited) %></h5>
+        </div>
       </div>
       <% end %>
       <p class="text-right"><u><%= link_to "全ての商品を見る >", items_path %></p>
