--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -12,7 +12,7 @@
           <%= image_tag item.user.get_profile_image, size: "60x100" %>
         <% end %>
         <%= item.name %>
-        <h5 class="font-weight-bold">¥<%= item.with_tax_price %></h5>
+        <h5 class="font-weight-bold">¥<%= item.with_tax_price.to_s(:delimited) %></h5>
       </div>
       <% end %>
     </div>
