--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,3 +1,44 @@
 <div class="container">
   <h2 class="title">商品編集</h2>
+    <%= form_with model: [:admin, @item] do |f| %>
+
+      <% if @item.errors.any? %>
+      <%= @item.errors.count %>件のエラーが発生しました
+      <ul>
+        <% @item.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+      <% end %>
+
+      <div class="field">
+        <%= f.label "商品画像" %>
+        <%= f.file_field :image, accept: "image/*" %>
+      </div>
+      <div class="field">
+        <%= f.label "商品名" %>
+        <%= f.text_field :name %>
+      </div>
+      <div class="field">
+        <%= f.label "商品説明" %>
+        <%= f.text_area :text %>
+      </div>
+      <div class="field">
+        <%= f.label "ジャンル" %>
+        <%= f.collection_select :genre_id, @genres, :id, :name %>
+      </div>
+      <div class="field">
+        <%= f.label "税抜き価格" %>
+        <%= f.text_field :non_taxed_price %>
+        <%= f.label "円" %>
+      </div>
+      <div class="field">
+        <%= f.label "販売ステータス" %>
+        <%= f.radio_button :is_active, true %>
+        <%= f.label :is_active, '販売中', value: true %>
+        <%= f.radio_button :is_active, false %>
+        <%= f.label :is_active, '販売停止中', value: false %>
+      </div>
+      <%= f.submit "変更を保存", class: "btn btn-success" %>
+    <% end %>
 </div>
