--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -26,6 +26,7 @@
       <div class="field">
         <%= f.label "ジャンル" %>
         <%= f.collection_select :genre_id, @genres, :id, :name, {prompt: "--選択してください--"} %>
+        <!--%= f.select :genre_id, @genres.map{ |genre| [genre.name,@item.genre_id=genre.id]} %-->
       </div>
       <div class="field">
         <%= f.label "税抜き価格" %>
