--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,3 +1,33 @@
 <div class="container">
   <h2 class="title">商品詳細</h2>
+    <thead>
+      <th>
+        <%= image_tag @item.image %>
+      </th>
+    </thead>
+    <tbody>
+      <td>
+        商品名　<%= @item.name %>
+      </td><br>
+      <td>
+        商品説明　<%= @item.text %>
+      </td><br>
+      <td>
+        ジャンル　<%= @item.genre.name %>
+      </td><br>
+      <td>
+        税込価格(税抜価格)　<%= @item.non_taxed_price %>(<%= @item.with_tax_price %>)円
+      </td><br>
+      <td>
+        販売ステータス
+        <% if @item.is_active == true %>
+          販売中
+        <% else %>
+          販売停止中
+        <% end %>
+      </td><br>
+      <td>
+        <%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-success" %>
+      </td>
+    </tbody>
 </div>
