--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,10 +1,9 @@
-<h1>マイページ</h1>
+
 <div class="row">
 <div class="col-xs-offset-1 col-xs-8">
 <h2 class="head-line text-center title_h2">マイページ</h2>
 <p><strong class="information-link"><i class="far fa-user"></i>登録情報</strong>
-<%= link_to " 編集する", edit_customer_path, class: "glyphicon glyphicon-pencil btn btn-success" %>
-<%= link_to " パスワードを変更する", edit_customer_registration_path, class: "glyphicon glyphicon-pencil btn btn-warning" %></p>
+<%= link_to " 編集する", customers_information_edit_path, class: "glyphicon glyphicon-pencil btn btn-success" %>
 
 <table class="table table-bordered table-condensed" >
 <tbody>
@@ -34,3 +33,5 @@
 					</tr>
 				</tbody>
 			</table>
+			</div>
+			</div>
