--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,10 +13,17 @@
     <li class="nav-item"><%= link_to "ジャンル一覧", admin_genres_path %></li>
     <li class="nav-item"><%= link_to "ログアウト", destroy_admin_session_path,method: :delete%></li>
   <% else %>
-    <li class="nav-item"><%= link_to "About", about_path %></li>
-    <li class="nav-item"><%= link_to "商品一覧", items_path %></li>
-    <li class="nav-item"><%= link_to "新規登録",  new_customer_registration_path, method: :get %></li>
-    <li class="nav-item"><%= link_to "ログイン", customer_session_path,method: :get%></li>
+    <% if request.fullpath.include? "/admin" %>
+      <li class="nav-item"><%= link_to "About", about_path %></li>
+      <li class="nav-item"><%= link_to "商品一覧", items_path %></li>
+      <li class="nav-item"><%= link_to "新規登録",  new_customer_registration_path, method: :get %></li>
+      <li class="nav-item"><%= link_to "ログイン", admin_session_path,method: :get%></li>
+    <% else %>
+      <li class="nav-item"><%= link_to "About", about_path %></li>
+      <li class="nav-item"><%= link_to "商品一覧", items_path %></li>
+      <li class="nav-item"><%= link_to "新規登録",  new_customer_registration_path, method: :get %></li>
+      <li class="nav-item"><%= link_to "ログイン", customer_session_path,method: :get%></li>
+    <% end %>
   <% end %>
 
 </ul>
