--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div class ="container">
 
   <div class = "row">
-    <div class = "col-4 mb-2">
+    <div class = "my-4">
       <span class ="px-2 py-1 bg-light">注文履歴一覧</span>
     </div>
     <% if @order.present? %>
