--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-    <div class="col-3">会員一覧</div>
+  <div class="row my-3">
+    <span class="rounded bg-light py-2 px-3 font-weight-bold">会員一覧</span>
   </div>
   <div class="row">
     <table class="table table-hover">
@@ -22,7 +22,9 @@
         </tr>
       </tbody>
       <% end %>
-      <%= paginate @customers %>
     </table>
-  </div>
+    </div>
+    <div class="row justify-content-center">
+      <%= paginate @customers, class: "justify-content-center" %>
+    </div>
 </div>
