--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -3,19 +3,23 @@
     <div class="col-2">
       <!--ジャンル検索機能実装スペース-->
     </div>
-    <div class="col-8">
-      <h3 class="d-inline font-weight-bold">商品一覧</h3>
-      <h5 class="d-inline align-text-bottom">（全<%= @items.count %>件）</h5>
+    <div class="col-10">
+      <h3 class="font-weight-bold">商品一覧</h3>
+      <h5 class="align-text-bottom">（全<%= Item.all.count %>件）</h5>
       <% @items.each do |item| %>
-      <div class="d-flex flex-row flex-wrap flex-fill">
+      <div class="card d-inline-flex mt-2 border border-0">
+        <div class="card-body px-0 mr-2">
         <%= link_to item_path(item.id) do %>
-          <%= image_tag item.user.get_profile_image, size: "60x100" %>
+          <%= image_tag item.image, size: "200x120" %>
         <% end %>
-        <%= item.name %>
+        <h5 class="font-weight-bold"><%= item.name %></h5>
         <h5 class="font-weight-bold">¥<%= item.with_tax_price.to_s(:delimited) %></h5>
+        </div>
       </div>
       <% end %>
+      <div class="d-flex justify-content-center">
+        <u><%= paginate @items %>
+      </div>
     </div>
   </div>
-  <%= paginate @items %>
 </div>
