--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -6,18 +6,17 @@
     <div class="col-4">
       <%= image_tag @item.image, size: "350x250" %>
     </div>
-    <div class="col-5">
-      <%= @item.name %>
-      <%= @item.text %>
-      <div class="d-inline">
-        <h3 class="font-weight-bold">¥<%= @item.with_tax_price.to_s(:delimited) %></h3>
-        <h5 class="align-text-bottom">（税込）</h5>
-      </div>
-      <div class="d-inline">
+    <div class="col-5 ml-3">
+      <h2 class="font-weight-bold"><%= @item.name %></h2>
+      <h4 class="h-50 mb-5"><%= @item.text %></h4>
+      <h3 class="font-weight-bold d-inline">¥ <%= @item.with_tax_price.to_s(:delimited) %></h3>
+      <h5 class="align-text-bottom d-inline">（税込）</h5>
+      <div class="d-flex mt-5">
         <%= form_with model: @cart_item do |f| %>
-          <%= f.select :order_item_quantity, *[1..10], placeholder: "個数選択" %>
-          <%= f.hidden_field :name, :value => :order_item_quantity %>
-          <%= f.submit "カートに入れる", class: "btn btn-success" %>
+        <div>
+          <%= f.select :order_item_quantity, *[1..10], { prompt: "個数選択　　" } %>
+          <%= f.hidden_field :item_id, :value => @item.id %>
+          <%= f.submit "カートに入れる", class: "btn btn-success ml-5" %>
         <% end %>
       </div>
     </div>
