--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -3,38 +3,40 @@
 <div class="row">
   <div class="col-xs-12">
   <h2 class="head-line title_h2 text-center">注文情報入力</h2>
-      <%= form_with :model => @order,method: :post, local: true  do |f| %>
-        <h3 class="col-xs-3 sub-head text-center"><i class="fas fa-yen-sign"></i>支払い方法</h3>
-          <div class="col-xs-10 radio">
-            <%= f.radio_button :payment_method, :"クレジットカード", checked: true %>
-            <span>クレジットカード</span>
+  <div class="col-xs-offset-1">
+      <%= form_with :model => @order, method: :post, local: true  do |f| %>
+        <h3 class="col-xs-5 sub-head text-center">支払い方法</h3>
+          <div class="col-xs-10 radio text-center">
+            <%= f.radio_button :payment_method, "credit_card", checked: true %>
+            <span>&nbsp;クレジットカード</span>
           </div>
-          <div class="col-xs-10 radio">
-            <%= f.radio_button :payment_method, :"銀行振込" %>
-            <span>銀行振り込み</span>
-          </div>
+          <div class="col-xs-10 radio text-center">
+            <%= f.radio_button :payment_method, :"transfer" %>
+            <span>&nbsp;銀行振り込み</span>
           </div>
            
 
-        <h3 class="col-xs-3 sub-head text-center"><i class="fas fa-people-carry"></i>お届け先</h3>
-          <div class="col-xs-10 radio">
+        <h3 class="col-xs-5 sub-head text-center">お届け先</h3>
+          <div class="col-xs-10 radio text-center">
             <%= f.radio_button :addresses, "registrations", checked: true  %>
-            <span>ご自身の住所</span><br>
-            
+            <span>&nbsp;ご自身の住所</span><br>
+             &emsp;&emsp;<%= " 〒#{current_customer.postal_code} #{current_customer.address}" %>
+            <br>
+            &emsp;&emsp;<%= "#{current_customer.last_name} #{current_customer.first_name}" %>
           </div>
 
           
-          <div class="col-xs-10 radio">
+          <div class="col-xs-10 radio text-center">
             <%= f.radio_button :addresses, "shipping_addresses" %>
-              <span>登録済住所から選択</span><br>
+              <span>&nbsp;登録済住所から選択</span><br>
           </div>
          
 
-          <div class="new-address col-xs-10 radio">
+          <div class="new-address col-xs-10 radio text-center">
             <%= f.radio_button :addresses, "new_address" %>
-            <span>新しいお届け先</span><br>
+            <span>&nbsp;新しいお届け先</span><br>
             <div class="field form-group col-xs-11">
-              <%= f.label :"郵便番号(ハイフンなし)" %>
+              <%= f.label :"郵便番号" %>
               <%= f.text_field :postal_code %>
             </div>
             <div class="field form-group col-xs-11">
@@ -43,15 +45,17 @@
             </div>
             <div class="field form-group col-xs-11">
               <%= f.label :"宛名" %>
-              <%= f.text_field :name %>
+              <%= f.text_field :address_name %>
             </div>
           </div>
 
-          <div class="btns col-xs-8">
+          <div class="btns col-xs-8 text-center">
              <!--ユーザーのカート画面に戻るパスを指定-->
              カートへ戻る
             
             <%= f.submit "確認画面へ進む" %>
             <% end %>
           </div>
+    </div>
+    </div>
     </div>
