--- a/app/views/public/orders/thanx.html.erb
+++ b/app/views/public/orders/thanx.html.erb
@@ -1,7 +1,4 @@
-<h1>ありがとうございました！</h1>
+
 <div class="row col-xs-12 center-block">
-  <h1 class="text-center ">ご購入ありがとうございました！</h1><br>
-  <div class="col-xs-7">
-    <%= link_to "　注文履歴はこちら　", "#" , class: "glyphicon glyphicon-folder-open btn btn-info pull-right" %>
-  </div>
+  <h1 class="text-center ">ご購入ありがとうございました！</h1>
 </div>
