ヘッダー/検索フォーム調整

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
-<div class="border-top fixed-bottom">
+<div class="container-fluid border-top bg-white mt-auto">
   <!--SNSのリンク(仮)-->
   <div class="text-center mt-2 h4">
     <%= link_to "#",class: "sns-link text-primary" do %><i class="fa-brands fa-facebook mx-1"></i><% end %>
     <%= link_to "#",class: "sns-link text-primary" do %><i class="fa-brands fa-twitter mx-1"></i><% end %>
-    <%= link_to "#",class: "sns-link" do %><i class="fa-brands fa-instagram mx-1"></i><% end %>
+    <%= link_to admin_root_path,class: "sns-link" do %><i class="fa-brands fa-instagram mx-1"></i><% end %>
     <%= link_to "#",class: "sns-link text-success" do %><i class="fa-brands fa-line mx-1"></i><% end %>
   </div>
   <p class="text-center">Naganocake Inc. All Rights reserved.</p>
