--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -25,6 +25,6 @@
     </table>
     </div>
     <div class="row justify-content-center">
-      <%= paginate @customers, class: "justify-content-center" %>
+      <%= paginate @customers %>
     </div>
 </div>
