--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,16 +7,16 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link rel ="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome-animation@1.1.1/css/font-awesome-animation.min.css"></link>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
   </head>
 
-  <body class="d-flex flex-column">
+  <body class="d-flex flex-column vh-100">
     <%= render 'layouts/header' %>
     <main>
-    <%= yield %>
+      <%= yield %>
     </main>
     <%= render 'layouts/footer' %>
   </body>
