--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,7 +1,12 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap');
 
  .sns-link {
      text-decoration: none;
      color:black;
+ }
+ 
+ .public-menu{
+  font-family: 'Kosugi Maru', sans-serif;
  }
