--- a/app/views/public/searches/search_result.html.erb
+++ b/app/views/public/searches/search_result.html.erb
@@ -33,4 +33,7 @@
       <% end %>
     </tbody>
   </table>
+  <div class="row justify-content-center">
+    <%= paginate @items %>
+  </div>
 </div>
