--- a/app/views/admin/searches/search_result.html.erb
+++ b/app/views/admin/searches/search_result.html.erb
@@ -36,7 +36,7 @@
     <%= paginate @customers %>
   </div>
   <% else %>
-    <!--検索対象モデルがUserではない時(= 検索対象モデルがBookの時) -->
+    <!--検索対象モデルがCustomerではない時(= 検索対象モデルがItemの時) -->
       <thread>
         <tr class="bg-light">
           <th scope="col">商品ID</th>
