--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -4,7 +4,7 @@
       <h4>ショッピングカート</h4>
     </div>
     <div class="col-6 text-right">
-      <%= link_to "カートを空にする", cart_items_path(@cart_items), class: "btn btn-danger", method: :delete %>
+      <%= link_to "カートを空にする", cart_item_destroy_all_path(@cart_items), class: "btn btn-danger", method: :delete %>
     </div>
   </div>
 
@@ -20,36 +20,44 @@
         </tr>
       </thead>
       <tbody>
-        <% @cart_items.each do |cart_item| %>
         <tr>
+          <% @cart_items.each do |cart_item| %>
           <td>
-            <%= image_tag item.get_image, size: "15x25" %>
-            <%= item.name %>
+            <%= image_tag cart_item.item.image, size: "100x60" %>
+            <%= cart_item.item.name %>
           </td>
           <td><%= cart_item.item.with_tax_price.to_s(:delimited) %></td>
           <td>
-            <%= form_with model: @cart_item do |f| %>
-              <%= f.select :order_item_quantity, *[1..10], placeholder: "個数選択" %>
-              <%= f.hidden_field :name, :value => :order_item_quantity %>
+            <%= form_with model: CartItem, url: cart_item_path(cart_item.id), method: :patch do |f| %>
+              <%= f.select :order_item_quantity, *[1..10], { selected: cart_item.order_item_quantity } %>
+              <%= f.hidden_field :item_id, :value => cart_item.item.id %>
+              <%= f.submit "変更", class: "btn btn-success" %>
             <% end %>
-            <%= f.submit "変更", class: "btn btn-success" %>
           </td>
-          <td><%= cart_item.subtotal %></td>
+          <td><%= cart_item.subtotal.to_s(:delimited) %></td>
           <td class="text-center">
             <%= link_to "削除する", cart_item_path(cart_item), class: "btn btn-danger", method: :delete %>
           </td>
         </tr>
-        <%= @total += cart_item.subtotal %>
         <% end %>
       </tbody>
     </table>
   </div>
     
-  <div class="row my-5">
-    <div class="col-2 offset-2">
+  <div class="row w-75 my-5 mx-auto">
+    <div class="col-2 d-inline">
       <%= link_to "買い物を続ける", root_path, class: "btn btn-primary" %>
     </div>
+    <div class="col-10 d-inline-flex justify-content-end">
+      <table class="table table-bordered" style="width: 30%">
+        <tr>
+          <th scope="row" class="table-secondary" style="width: 15%">合計金額</th>
+          <td style="width: 15%"><%= @total.to_s(:delimited) %></td>
+        </tr>
+      </table>
+    </div>
   </div>
+  
   <div class="row justify-content-center">
     <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
   </div>
