--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -23,18 +23,14 @@
     		    <td class="text-left">
     		    <%= order.postal_code %><br>
     		    <%= order.address %><br>
-    		    <%= order.name %>
+    		    <%= order.address_name %>
     		    </td>
-    		    <td>
-    		    <% order.order_details.each do |order_detail| %>
-    		    <%= order_detail.product.name %><br>
-    		    <% end %>
-    		    </td>
+    		   
     		    <td class="text-right">
-    		    <%= order.total_price.to_s(:delimited) %>円
+    		    <!--%= order.total_price.to_s(:delimited) %-->円
     		    </td>
          	    <td>
-       	        <%= link_to "注文詳細", customers_order_path(order), class: "glyphicon glyphicon-zoom-in btn btn-success" %>
+       	        <%= link_to "注文詳細", order_path(order), class: "glyphicon glyphicon-zoom-in btn btn-success" %>
        	        </td>
               </tr>
             <% end %>
