--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,8 +1,9 @@
 <h1>注文</h1>
-
+<div class="container-fluid">
 <div class="row">
   <div class="col-xs-12">
   <h2 class="head-line title_h2 text-center">注文情報入力</h2>
+   <% if current_customer.cart_items.present? %>
   <div class="col-xs-offset-1">
       <%= form_with :model => @order, method: :post, local: true  do |f| %>
         <h3 class="col-xs-5 sub-head text-center">支払い方法</h3>
@@ -29,6 +30,7 @@
           <div class="col-xs-10 radio text-center">
             <%= f.radio_button :addresses, "shipping_addresses" %>
               <span>&nbsp;登録済住所から選択</span><br>
+               &emsp;&emsp;<%= f.collection_select(:shipping_address_id, @shipping_addresses, :id,,:postal_code,:address,:address_name) %>
           </div>
          
 
@@ -50,12 +52,18 @@
           </div>
 
           <div class="btns col-xs-8 text-center">
-             <!--ユーザーのカート画面に戻るパスを指定-->
-             カートへ戻る
+            <%= link_to cart_items_path, class: "glyphicon glyphicon-shopping-cart btn btn-info col-xs-3 cart-back" do %>
+             カート(<%= current_customer.cart_items.count %>)へ戻る<% end %>
             
-            <%= f.submit "確認画面へ進む" %>
-            <% end %>
+            <%= f.submit "確認画面へ進む",class: "glyphicon glyphicon-zoom-in btn btn-success"%>
+           <% end %>
           </div>
     </div>
+    <% else %>
+      <p>お客様のショッピングカートに商品はありませんので注文情報の入力ができません。</p>
+      <p><%= link_to "商品一覧",  items_path, class: "btn btn-warning" %>から商品をお探し下さい。</p>
+    <% end %>
+     
     </div>
     </div>
+     </div>
