--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -18,7 +18,7 @@
           <td><%= customer.id %></td>
           <td><%= link_to "#{customer.last_name+customer.first_name}", admin_customer_path(customer.id) %></td>
           <td><%= customer.email %></td>
-          <td><%= customer.is_deleted %></td>
+          <td><%= customer.customer_status %></td>
         </tr>
       </tbody>
       <% end %>
