--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,128 +1,10 @@
 <div class="container">
   <div class="row">
     <span>注文履歴詳細</span>
-  </div>    
+  </div> 
   <div class="row">
-    <% if @order.present? %>
-      <table class="table table-borderless">
-          <tbody>
-              <th>購入者</th>
-              <td></td>
-          </tbody>
-      </table>
-    <% else %>
-      <p>注文情報がありません</p>
-      <table class="table table-borderless table-sm">
-        <tbody>
-          <tr>
-            <th class ="col-2">購入者</th>
-            <td class ="col-10">山田花子<%#= link_to "#{@name}",admin_customer_orders_path(@order.customer_id) %></td>
-          </tr>
-          <tr>
-            <th scope ="row">注文日</th>
-            <td>2023/1/10<%#= @order.created_at %></td>
-          </tr>
-          <tr>
-            <th scope ="row">配送先</th>
-            <td>東京都渋谷区神南1丁目<%#= @order.address %></td>
-          </tr>
-          <tr>
-            <th scope="row"></th>
-            <td>山田花子<%#= @order.address_name %></td>
-          </tr>
-          <tr>
-            <th scope="row">支払い方法</th>
-            <td>銀行振込<%#= @order.payment_method %></td>
-          </tr>
-          <tr>
-            <th scope="row">注文ステータス</th>
-            <td>
-              入金待ち
-              <%#= form_with model: [:admin, @order] do |f| %>
-                <%#= @order.payment_method %>
-                <%#= f.select :status, options_from_collection_for_select(Order.all, :id, :status) %>
-                <%#= f.submit '更新', class:"btn btn-success" %>
-              <%# end %>
-              </td>
-          </tr>
-          </tbody>
-      </table>
-    <% end %>
-    
-    <% if @order_item.present? %>
-      <table class="table table-hover table-sm ">
-        <thread>
-          <tr>
-            <th scope="row">商品名</th>
-            <th scope="row">単価（税込）</th>
-            <th scope="row">数量</th>
-            <th scope="row">小計</th>
-            <th scope="row">製作ステータス</th>
-            <th scope="row"></th>
-          </tr>
-        </thread>
-        <tbody>
-          <% @order_item.each do |item| %>
-            <%= form_with model: [:admin, item] do |f| %>
-            <tr>
-              <td><%= item.name %></td>
-              <td><%= item.tax_included_price %></td>
-              <td><%= item.quantity %></td>
-              <td><%= item.tax_included_price * item.quantity %></td>
-              <td><%= f.select :status, options_from_collection_for_select(OrderItem.all, :id, :status) %></td>
-              <td><%= f.submit "更新", class:"btn btn-success" %></td>
-            </tr>
-            <% end %>
-          <% end %>
-        </tbody>
-      </table>
-    <% else %>
-      <!--<p>注文詳細がありません</p>-->
-      <table class="table table-sm table-hover col-8">
-        <thead>
-          <tr class="table-secondary">
-            <th scope="col">商品名</th>
-            <th scope="col">単価（税込）</th>
-            <th scope="col">数量</th>
-            <th scope="col">小計</th>
-            <th scope="col">製作ステータス</th>
-            <th scope="col"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <%# @order_item.each do |item| %>
-          <%#= form_with model: [:admin, item] do |f| %>
-          <tr>
-            <td>1<%#= item.name %></td>
-            <td>2<%#= item.tax_included_price %></td>
-            <td>3<%#= item.quantity %></td>
-            <td>4<%#= item.tax_included_price * item.quantity %></td>
-            <td>5<%#= f.select :status, options_from_collection_for_select(OrderItem.all, :id, :status) %></td>
-            <td>6<%#= f.submit "更新", class:"btn btn-success" %></td>
-          </tr>
-          <%# end %>
-          <%# end %>
-        </tbody>
-      </table>
-      <table class="col-3 offset-1 table table-borderless table-sm">
-        <tbody>
-          <tr>
-            <th class ="font-weight-bold">商品合計</li>
-            <td>円</td>
-          </tr>
-          <tr>  
-            <th class ="font-weight-bold">送料</li>
-            <td>円</td>
-          </tr>
-          <tr>
-            <th class ="font-weight-bold">請求金額合計</li>
-            <td>円</td>
-          </tr>
-        </tbody>
-
-      </table>
-
-    <% end %>
+    <%= render 'order', order: @order %>
+    <%= render 'detail',order_item: @order_item %>
   </div>
 </div>
 
