--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,3 +1,12 @@
+<% if @cart_item.errors.any? %>
+  <%= @cart_item.errors.count %>件のエラーが発生しました %>
+  <ul>
+    <% @cart_item.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <div class="container">
   <div class="row mt-5">
     <div class="col-2">
