--- a/app/views/public/shipping_addresses/index.html.erb
+++ b/app/views/public/shipping_addresses/index.html.erb
@@ -1,7 +1,16 @@
 
-<div class="col-2 offset-1 mb-5 bg-light text-black">
+<div class="col-2 offset-1 my-5 bg-light text-black">
   <h3>配送先登録 / 一覧</h3>
 </div>
+
+<% if @shipping_address.errors.any? %>
+  <%= @shipping_address.errors.count %>件のエラーが発生しました %>
+  <ul>
+    <% @shipping_address.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <div class="container-fluid">
   <%= form_with model: @shipping_address do |f| %>
