--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -30,7 +30,7 @@
           <div class="col-xs-10 radio text-center">
             <%= f.radio_button :addresses, "shipping_addresses" %>
               <span>&nbsp;登録済住所から選択</span><br>
-               &emsp;&emsp;<%= f.collection_select(:shipping_address_id, @shipping_addresses, :id,,:postal_code,:address,:address_name) %>
+               &emsp;&emsp;<%= f.collection_select(:shipping_address_id, @shipping_addresses, :id,:address, include_blank: "選択して下さい") %>
           </div>
          
 
