--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,5 +1,8 @@
 <div class="container">
-  <h2 class="title">ジャンル編集</h2>
+  <div class="row my-3">
+    <span class="rounded bg-light py-2 px-3 font-weight-bold">ジャンル編集</span>
+  </div>
+
     <%= form_with model: [:admin, @genre] do |f| %>
 
       <% if @genre.errors.any? %>
