--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,5 +1,9 @@
 <div class="container">
-  <h2 class="title">ジャンル一覧・追加</h2>
+  <div class="row my-3">
+    <span class="rounded bg-light py-2 px-3 font-weight-bold">ジャンル一覧・追加</span>
+  </div>
+
+  <div>
     <%= form_with model: [:admin, @genre] do |f| %>
 
       <% if @genre.errors.any? %>
@@ -17,18 +21,24 @@
       </div>
       <%= f.submit "新規登録", class: "btn btn-success" %>
     <% end %>
+  </div>
 
-  <thead>
-    <th>ジャンル</th><br>
-    <tr>
-      <% @genres.each do |genre| %>
+  <div class="row">
+    <table class="table table-hover">
+      <thead>
+        <th class="bg-light">ジャンル</th>
+      </thead>
+      <tbody>
         <tr>
-          <td><%= genre.name %></td>
-          <td>
-            <%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-success" %>
-          </td>
-        </tr><br>
-      <% end %>
-    </tr>
-  </thead>
-</div>
+          <% @genres.each do |genre| %>
+            <tr>
+              <td><%= genre.name %></td>
+              <td>
+                <%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-success" %>
+              </td>
+            </tr>
+          <% end %>
+        </tr>
+      </tbody>
+    </table>
+  </div>
