--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,5 +1,11 @@
 <div class="container">
-  <h2 class="title">商品編集</h2>
+  <div class="row my-3">
+    <div class="my-auto py-auto">
+      <span class="rounded bg-light py-2 px-3 font-weight-bold">商品編集</span>
+    </div>
+  </div>
+
+  <div>
     <%= form_with model: [:admin, @item] do |f| %>
 
       <% if @item.errors.any? %>
@@ -11,34 +17,44 @@
       </ul>
       <% end %>
 
-      <div class="field">
-        <%= f.label "商品画像" %>
-        <%= f.file_field :image, accept: "image/*" %>
+      <div>
+        <table class="table ml-5">
+          <tr class="field">
+            <td><%= f.label "商品画像" %></td>
+            <td><%= f.file_field :image, accept: "image/*" %></td>
+          </tr>
+          <tr class="field">
+            <td><%= f.label "商品名" %></td>
+            <td><%= f.text_field :name %></td>
+          </tr>
+          <tr class="field">
+            <td><%= f.label "商品説明" %></td>
+            <td><%= f.text_area :text %></td>
+          </tr>
+          <tr class="field">
+            <td><%= f.label "ジャンル" %></td>
+            <td><%= f.collection_select :genre_id, @genres, :id, :name %></td>
+          </tr>
+          <tr class="field">
+            <td><%= f.label "税抜き価格" %></td>
+            <td>
+              <%= f.text_field :non_taxed_price %>
+              <%= f.label "円" %>
+            </td>
+          </tr>
+          <tr class="field">
+            <td><%= f.label "販売ステータス" %></td>
+            <td>
+              <%= f.radio_button :is_active, true %>
+              <%= f.label :is_active, '販売中', value: true %>
+              <%= f.radio_button :is_active, false %>
+              <%= f.label :is_active, '販売停止中', value: false %>
+            </td>
+          </tr>
+        </table>
       </div>
-      <div class="field">
-        <%= f.label "商品名" %>
-        <%= f.text_field :name %>
+      <div class="text-center">
+        <%= f.submit "変更を保存", class: "btn btn-success" %>
       </div>
-      <div class="field">
-        <%= f.label "商品説明" %>
-        <%= f.text_area :text %>
-      </div>
-      <div class="field">
-        <%= f.label "ジャンル" %>
-        <%= f.collection_select :genre_id, @genres, :id, :name %>
-      </div>
-      <div class="field">
-        <%= f.label "税抜き価格" %>
-        <%= f.text_field :non_taxed_price %>
-        <%= f.label "円" %>
-      </div>
-      <div class="field">
-        <%= f.label "販売ステータス" %>
-        <%= f.radio_button :is_active, true %>
-        <%= f.label :is_active, '販売中', value: true %>
-        <%= f.radio_button :is_active, false %>
-        <%= f.label :is_active, '販売停止中', value: false %>
-      </div>
-      <%= f.submit "変更を保存", class: "btn btn-success" %>
     <% end %>
 </div>
