--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,22 +1,45 @@
 <div class="container">
-  <h2 class="title">商品一覧</h2>
-  <tbody>
-    <tr>
-    <% @items.each do |item| %>
-      <tr>
-        <td><%= item.id %></td>
-        <td><%= link_to item.name, admin_item_path(item.id) %></td>
-        <td><%= item.non_taxed_price %></td>
-        <td><%= item.genre.name %></td>
-        <td>
-          <% if item.is_active == true %>
-            販売中
-          <% else %>
-            販売停止中
-          <% end %>
-        </td>
-      </tr><br>
-    <% end %>
-    </tr>
-  </tbody>
+  <div class="row my-3">
+    <div class="my-auto py-auto">
+      <span class="rounded bg-light py-2 px-3 font-weight-bold">商品一覧</span>
+    </div>
+    <div class="ml-auto">
+      <a href="items/new" class="btn btn-circle btn-circle-c btn-shadow">
+        <i class="fas fa-plus"></i>
+      </a>
+    </div>
+  </div>
+  
+  <div class="row">
+    <table class="table table-hover">
+      <thead>
+        <tr class="bg-light">
+          <th scope="col">商品ID</th>
+          <th scope="col">商品名</th>
+          <th scope="col">税抜価格</th>
+          <th scope="col">ジャンル</th>
+          <th scope="col">ステータス</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+        <% @items.each do |item| %>
+          <tr>
+            <td><%= item.id %></td>
+            <td><%= link_to item.name, admin_item_path(item.id), class: "text-reset" %></td>
+            <td><%= item.non_taxed_price %></td>
+            <td><%= item.genre.name %></td>
+            <td>
+              <% if item.is_active == true %>
+                <p class="text-success">販売中</p>
+              <% else %>
+                <p class="text-black-50">販売停止中</p>
+              <% end %>
+            </td>
+          </tr><br>
+        <% end %>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
