[Update]カートへのアクセス制限追加、商品一覧・配送先の部分テンプレート化

--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -6,17 +6,7 @@
     <div class="col-10">
       <h3 class="font-weight-bold">商品一覧</h3>
       <h5 class="align-text-bottom">（全<%= Item.all.count %>件）</h5>
-      <% @items.each do |item| %>
-      <div class="card d-inline-flex mt-2 border border-0">
-        <div class="card-body px-0 mr-2">
-        <%= link_to item_path(item.id) do %>
-          <%= image_tag item.image, size: "200x120" %>
-        <% end %>
-        <h5 class="font-weight-bold"><%= item.name %></h5>
-        <h5 class="font-weight-bold">¥<%= item.with_tax_price.to_s(:delimited) %></h5>
-        </div>
-      </div>
-      <% end %>
+      <%= render "items", items: @items %>
       <div class="d-flex justify-content-center">
         <u><%= paginate @items %>
       </div>
