--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -22,7 +22,7 @@
           <div class="col-xs-10 radio text-center">
            <%= f.radio_button :address_number, 1 %>
             <span>&nbsp;<%= f.label :address_number_1, "ご自身の住所" %></span><br>
-             &emsp;&emsp;<%= " 〒#{current_customer.postal_code} #{current_customer.address}" %>
+             &emsp;&emsp;<%= " #{current_customer.postal_code} #{current_customer.address}" %>
             <br>
             &emsp;&emsp;<%= "#{current_customer.last_name} #{current_customer.first_name}" %>
           </div>
