--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -35,15 +35,15 @@
         	<table class="table table-bordered table-condensed">
             <tr>
               <th class="info">商品合計</th>
-              <td class="text-right col-xs-5"><円</td>
+              <td class="text-right col-xs-5"><%= @order.billing_amount %>円</td>
             </tr>
             <tr>
               <th class="info">配送料</th>
-              <td class="text-right col-xs-5">円</td>
+              <td class="text-right col-xs-5">800円</td>
             </tr>
             <tr>
               <th class="info">ご請求金額</th>
-              <td class="text-right col-xs-5">円</td>
+              <td class="text-right col-xs-5"><%= @order.billing_amount %>円</td>
             </tr>
         </table>
     </div>
@@ -51,6 +51,7 @@
     	<strong><i class="fas fa-store"></i>注文内容</strong>
         <table class="table table-striped table-bordered table-condensed">
         	<thead>
+        	 
   	      <tr class="info">
   	      	<th>商品</th>
   	        <th>単価(税込)</th>
