--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -2,7 +2,7 @@
 
   <div class = "row">
     <div class = "my-4">
-      <span class ="px-2 py-1 bg-light">注文履歴一覧</span>
+      <span class ="rounded bg-light py-2 px-3 font-weight-bold">注文履歴一覧</span>
     </div>
     <% if @order.present? %>
     <table class ="table table-hover">
