--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,44 +1,56 @@
-<div class="container">
+<div class="container mb-3">
+  
+    <% flash.each do |key, value| %>
+    <div class="mt-4"></div>
+      <span class="alert alert-danger alert-dismissible" role="alert">
+         <%= content_tag(:span, value, class: key) %>
+        <button class="close", data-dismiss="alert">☓</button>
+      </span>
+    <% end %>
     <div class="row">
-        <span class ="px-2 bg-light"><%= @customer.last_name + @customer.first_name %>さんの会員詳細</span>
+        <span class ="rounded bg-light mt-4 py-2 px-3 font-weight-bold"><%= @customer.customer_name%>さんの会員詳細</span>
     </div>
+    
     <div class="row">
         <%= form_with model: [:admin, @customer] do |f| %>
-          <table class="mt-3 table table-borderless">
+          <table class="col-12 mt-3 table table-borderless bg-light border rounded">
             <tbody>
                 <tr>
-                    <th class="col">会員ID</th>
-                    <td class="col"><%= @customer.id %></td>
+                    <th class="col-3">会員ID</th>
+                    <td class="col-4 font-weight-bold"><%= @customer.id %></td>
+                    <td class="col-5"></td>
                 </tr>
                 <tr>
-                    <th><%= f.label "氏名" %></th>
-                    <td><%= f.text_field :last_name %></td>
-                    <td><%= f.text_field :first_name %></td>
+                    <th scope="row"><%= f.label "氏名" %></th>
+                    <td><%= f.text_field :last_name,class:"form-control" %></td>
+                    <td><%= f.text_field :first_name,class:"form-control" %></td>
                 </tr>
                 <tr>
-                    <th>フリガナ</th>
-                    <td><%= f.text_field :last_name_kana %></td>
-                    <td><%= f.text_field :first_name_kana %></td>
+                    <th scope="row">フリガナ</th>
+                    <div class="col">
+                      <td><%= f.text_field :last_name_kana,class:"form-control" %></td>
+                      <td><%= f.text_field :first_name_kana,class:"form-control" %></td>
+                    </div>
 
                 </tr>
                 <tr>
-                    <th>郵便番号</th>
-                    <td><%= f.text_field :postal_code %></td>
+                    <th scope="row">郵便番号</th>
+                    <td><%= f.text_field :postal_code,class:"form-control" %></td>
                 </tr>
                 <tr>
-                    <th>住所</th>
-                    <td colspan="2"><%= f.text_field :address, size:50 %></td>
+                    <th scope="row">住所</th>
+                    <td colspan="2"><%= f.text_field :address, size:50,class:"form-control" %></td>
                 </tr>
                 <tr>
-                    <th>電話番号</th>
-                    <td><%= f.text_field :phone_number %></td>
+                    <th scope="row">電話番号</th>
+                    <td><%= f.text_field :phone_number,class:"form-control" %></td>
                 </tr>
                 <tr>
-                    <th>メールアドレス</th>
-                    <td><%= f.email_field :email %></td>
+                    <th scope="row">メールアドレス</th>
+                    <td><%= f.email_field :email,class:"form-control" %></td>
                 </tr>
                 <tr>
-                    <th>会員ステータス</th>
+                    <th scope="row">会員ステータス</th>
                     <td>
                         <%= f.radio_button :is_deleted, '0', :checked => true %>
                         <%= f.label :is_deleted, "有効", value: 0 %>
