--- a/app/views/admin/orders/_detail.html.erb
+++ b/app/views/admin/orders/_detail.html.erb
@@ -27,7 +27,7 @@
       </table>
     <% else %>
       <!--<p>注文詳細がありません</p>-->
-      <table class="table table-sm table-hover col-8">
+      <table class="table table-sm col-8">
         <thead>
           <tr class="table-secondary">
             <th scope="col">商品名</th>
@@ -53,19 +53,19 @@
           <%# end %>
         </tbody>
       </table>
-      <table class="col-3 offset-1 table table-borderless table-sm">
+      <table class="col-3 offset-1 table table-bordered table-sm">
         <tbody>
           <tr>
-            <th class ="font-weight-bold">商品合計</li>
-            <td>円</td>
+            <th class ="col-5 font-weight-bold">商品合計</li>
+            <td class ="text-right col-7">円</td>
           </tr>
           <tr>  
             <th class ="font-weight-bold">送料</li>
-            <td>円</td>
+            <td class ="text-right">円</td>
           </tr>
           <tr>
             <th class ="font-weight-bold">請求金額合計</li>
-            <td>円</td>
+            <td class ="text-right">円</td>
           </tr>
         </tbody>
 
