--- a/app/views/admin/orders/_order.html.erb
+++ b/app/views/admin/orders/_order.html.erb
@@ -6,31 +6,31 @@
       </tbody>
   </table>
 <% else %>
-  <p>注文情報がありません</p>
-  <table class="table table-borderless table-sm">
+  <p class="col-12">注文情報がありません</p>
+  <table class="col-8 table table-bordered table-sm">
     <tbody>
       <tr>
-        <th class ="col-2">購入者</th>
-        <td class ="col-10">山田花子<%#= link_to "#{order.customer.customer_name}",admin_customer_orders_path(@order.customer_id) %></td>
+        <th class ="col-2 table-active">購入者</th>
+        <td class ="col-7">山田花子<%#= link_to "#{order.customer.customer_name}",admin_customer_orders_path(@order.customer_id) %></td>
       </tr>
       <tr>
-        <th scope ="row">注文日</th>
+        <th class ="table-active">注文日</th>
         <td>2023/1/10<%#= @order.created_at %></td>
       </tr>
       <tr>
-        <th scope ="row">配送先</th>
+        <th class ="table-active">配送先</th>
         <td>東京都渋谷区神南1丁目<%#= @order.address %></td>
       </tr>
       <tr>
-        <th scope="row"></th>
+        <th class="table-active">氏名</th>
         <td>山田花子<%#= @order.address_name %></td>
       </tr>
       <tr>
-        <th scope="row">支払い方法</th>
+        <th class="table-active">支払い方法</th>
         <td>銀行振込<%#= @order.payment_method %></td>
       </tr>
       <tr>
-        <th scope="row">注文ステータス</th>
+        <th class="table-active">注文ステータス</th>
         <td>
           入金待ち
           <%#= form_with model: [:admin, @order] do |f| %>
