--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,6 +1,8 @@
 <div class ="container">
   <div class="row">
+    <div class="rounded bg-light my-3 ml-2 py-2 px-3 font-weight-bold">
       <span><%= "#{@customer.customer_name}さんの注文履歴" %></span>
+    </div>
   </div>
   <table class ="table table-hover">
     <thread>
