--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-    <span>注文履歴詳細</span>
+  <div class="row mt-3">
+    <span class="rounded bg-light py-2 px-3 font-weight-bold">注文履歴詳細</span>
   </div> 
   <div class="row">
     <%= render 'order', order: @order %>
