--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -8,7 +8,7 @@
 <% elsif admin_signed_in? %>
   <div>
     <%= form_with url: admin_search_path, local: true, method: :get,class:"rounded-pill bg-secondary px-3" do |f| %>
-        <%= f.text_field :word, placeholder:"会員氏名/商品名で検索",class:"align-middle" %>
+        <%= f.text_field :word, placeholder:"会員氏名/商品名",class:"align-middle" %>
         <%= f.select :range, options_for_select([["会員",'Customer'], ["商品",'Item']]),{},{class:"align-middle btn btn-secondary"} %>
       <%= f.submit "検索", class: "btn btn-secondary" %>
     <% end %>
