商品販売ステータス表示のフォントの変更

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -30,9 +30,9 @@
             <td><%= item.genre.name %></td>
             <td>
               <% if item.is_active == true %>
-                <p class="text-success">販売中</p>
+                <p class="font-weight-bold text-success">販売中</p>
               <% else %>
-                <p class="text-black-50">販売停止中</p>
+                <p class="font-weight-bold text-black-50">販売停止中</p>
               <% end %>
             </td>
           </tr>
