--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -36,9 +36,9 @@
             <td>販売ステータス</td>
             <td>
               <% if @item.is_active == true %>
-                <p class="text-success">販売中</p>
+                <p class="font-weight-bold text-success">販売中</p>
               <% else %>
-                <p class="text-black-50">販売停止中</p>
+                <p class="font-weight-bold text-black-50">販売停止中</p>
               <% end %>
             </td>
           </tr>
