注文機能追加

--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -29,7 +29,7 @@
     		    <%= order.billing_amount %>円
     		    </td>
     		     <td>
-              <%= order.status %>
+              <%= order.status_i18n %>
     		     </td>
          	    <td>
        	        <%= link_to "注文詳細", order_path(order), class: "glyphicon glyphicon-zoom-in btn btn-success" %>
