--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -20,11 +20,11 @@
               </tr>
               <tr>
               　<th class="info">支払方法</th>
-                <td class="text-left"><%= @order.payment_method %></td>
+                <td class="text-left"><%= @order.payment_method_i18n %></td>
               </tr>
               <tr>
                 <th class="info">ステータス</th>
-                <td class="text-left"><%= @order.status %></td>
+                <td class="text-left"><%= @order.status_i18n %></td>
               </tr>
           </tbody>
         </table>
